# nlp_assignment_1

./: Makefile  README.md  pyproject.toml  requirements.txt
nlp_assignment_1/: __init__.py  dataset.py  features.py  plots.py
nlp_assignment_1/modeling/: predict.py  train.py
notebooks/: ANLP_AT1_ManhTuanNguyen_25739083.ipynb
