[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlp_assignment_1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "ManhTuan_Nguyen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["nlp_assignment_1"]
include = ["pyproject.toml", "nlp_assignment_1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nlp_assignment_1"]
force-sort-within-sections = true

